[gd_scene load_steps=9 format=3 uid="uid://b0r18e671nboh"]

[ext_resource type="Theme" uid="uid://ci6s48yvpipim" path="res://UI/revamped/custom_theme.tres" id="1_psncv"]
[ext_resource type="Script" uid="uid://c2e78s20xaa88" path="res://UI/revamped/menu_screen.gd" id="2_t6xur"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_je8vx"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.521569)

[sub_resource type="Gradient" id="Gradient_7l1m5"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.1, 0.7)
colors = PackedColorArray(0.116741, 0.116741, 0.116741, 1, 0, 0, 0, 0)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7l1m5"]
gradient = SubResource("Gradient_7l1m5")
width = 4096

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5ab1"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xpiot"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v05fi"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5

[node name="MenuScreen" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 2
theme = ExtResource("1_psncv")
theme_override_styles/panel = SubResource("StyleBoxFlat_je8vx")
script = ExtResource("2_t6xur")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture1D_7l1m5")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -318.0
offset_right = 720.0
offset_bottom = 318.0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(1000, 600)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font_size=150]It Gets [shake][color=red]WORSE"
fit_content = true
vertical_alignment = 2

[node name="MenuContinue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.447211, 0.862587, 0.909114, 1)
theme_override_colors/font_pressed_color = Color(0.288942, 0.731361, 0.776561, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_q5ab1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xpiot")
theme_override_styles/normal = SubResource("StyleBoxFlat_v05fi")
text = "Continue Previous Game"
alignment = 0

[node name="MenuOptions" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.447211, 0.862587, 0.909114, 1)
theme_override_colors/font_pressed_color = Color(0.288942, 0.731361, 0.776561, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_q5ab1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xpiot")
theme_override_styles/normal = SubResource("StyleBoxFlat_v05fi")
text = "Options (does nothing)"
alignment = 0

[node name="MenuQuit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.447211, 0.862587, 0.909114, 1)
theme_override_colors/font_pressed_color = Color(0.288942, 0.731361, 0.776561, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_q5ab1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xpiot")
theme_override_styles/normal = SubResource("StyleBoxFlat_v05fi")
text = "Quit"
alignment = 0

[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuContinue" to="." method="_on_menu_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuOptions" to="." method="_on_menu_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuQuit" to="." method="_on_menu_quit_pressed"]
